--- a/goyan/src/style.css
+++ b/goyan/src/style.css
@@ -57,6 +57,18 @@
     padding: 10px 15px;
   }
   
+  .Loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #eee;
+    text-align: center;
+  }
+
   .ImageInfo {
     position: fixed;
     left: 0;
